# tick

./: README.md  pyproject.toml  shaping-v1.0.md  shaping-v1.2.md  shaping.md  spike-a2.md  spike-a5.md  tick
src/tick/: __init__.py  app.py  config.py  geo.py  llm.py  times.py
tests/: test_app.py  test_geo.py  test_llm.py  test_times.py
