[project]
name = "tick"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "rjs@hey.com" }
]
requires-python = ">=3.14"
dependencies = [
    "textual>=7.5.0",
    "ollama>=0.4.0",
]

[project.scripts]
tick = "tick:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
]
